--- a/package.json
+++ b/package.json
@@ -1,63 +1,74 @@
 {
-  "name": "react-google-places-autocomplete",
-  "version": "3.4.0",
-  "description": "Google places autocomplete input for ReactJS.",
-  "main": "build/index.js",
-  "module": "build/index.es.js",
+  "name": "mui-google-places-autocomplete",
+  "version": "0.1.0",
+  "description": "Google places autocomplete input for MUI library in React.",
+  "homepage": "https://github.com/dylmye/mui-google-places-autocomplete",
+  "contributors": [
+    "Dylan Myers (https://dylmye.me)",
+    "Nicolás Tinte (https://www.tintef.uy)"
+  ],
+  "license": "ISC",
+  "keywords": [
+    "google",
+    "google-maps",
+    "google-places",
+    "places-api",
+    "autocomplete",
+    "mui",
+    "material-ui"
+  ],
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "module": "lib/index.es.js",
   "scripts": {
     "build": "rollup -c",
     "postbuild": "node ./build-utils/postBuild",
-    "lint": "eslint . --ext ts,tsx ."
+    "lint": "eslint . --ext ts,tsx .",
+    "prepare": "husky install"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint"
-    }
+  "dependencies": {
+    "@googlemaps/js-api-loader": "^1.13.4",
+    "@types/google.maps": "^3.50.0",
+    "use-debounce": "^3.4.3"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Tintef/react-google-places-autocomplete.git"
-  },
-  "author": "Nicolás Tinte",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Tintef/react-google-places-autocomplete/issues"
-  },
-  "homepage": "https://github.com/Tintef/react-google-places-autocomplete#readme",
-  "keywords": [
-    "react",
-    "google-places",
-    "places",
-    "autocomplete"
-  ],
   "devDependencies": {
+    "@mui/material": "^5.11.2",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-select": "^3.1.2",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "eslint": "^7.7.0",
     "eslint-plugin-react": "^7.20.6",
-    "husky": "^4.2.5",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "husky": "^8.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^2.26.4",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-peer-deps-external": "^2.2.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.27.2",
-    "typescript": "^3.9.7"
-  },
-  "dependencies": {
-    "@googlemaps/js-api-loader": "^1.13.4",
-    "@types/google.maps": "^3.50.0",
-    "react-select": "^4.3.1",
-    "use-debounce": "^3.4.3"
+    "typescript": "^4.9.4"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "@mui/material": "^5",
+    "react": "*",
+    "react-dom": "*"
+  },
+  "files": [
+    "/lib"
+  ],
+  "engines": {
+    "node": ">14.21.2"
+  },
+  "repository": "github:dylmye/mui-google-places-autocomplete",
+  "bugs": {
+    "url": "https://github.com/dylmye/mui-google-places-autocomplete/issues"
+  },
+  "directories": {
+    "lib": "./lib",
+    "src": "./src",
+    "doc": "./docs"
   }
 }
