--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.13.4",
     "@types/google.maps": "^3.50.0",
+    "formik": "^2.2.9",
     "use-debounce": "^3.4.3"
   },
   "devDependencies": {
