make sure release notes are only made after the release has been published

--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -36,6 +36,7 @@ jobs:
   create_release:
     runs-on: ubuntu-latest
     name: Create GitHub release
+    needs: build_and_publish
 
     steps:
       - name: Checkout
