fix vuln false positives - https://github.com/facebook/docusaurus/issues/8277

--- a/docs/package.json
+++ b/docs/package.json
@@ -32,5 +32,9 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.0.0-alpha.51"
+  },
+  "resolutions": {
+    "trim": "^0.0.3",
+    "got": "^11.8.5"
   }
 }
